--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Traffic Light</title>
-
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="traffic-light">
             <div class="panel">
-                <div class="light light-off">
-
+                <div id="red" class="light red-light">
                 </div>
-                <div class="light light-off">
-
+                <div id="yellow" class="light light-off">
                 </div>
-                <div class="light green-light">
-
+                <div id="green" class="light light-off">
                 </div>
             </div>
         </div>
 
-        <button>Click me</button>
+        <button onclick="changeTrafficLight()">Click me</button>
     </div>
+    <script src="trafficlight.js"></script>
 </body>
 </html>
